# bridge-v2

./: .gitignore  Cargo.toml  config.json  config2.json  example_log_rpc.json
api/: .env  ormconfig.json  package-lock.json  package.json  tsconfig.json
api/src/: app.ts  glitch.ts
api/src/entity/: Tx.ts
contracts/: hardhat.config.ts
contracts/contracts/: GlitchBridge.sol  GlitchToken.sol  bridge.abi
contracts/scripts/: deploy.ts
contracts/test/: GlitchBridge.ts
db/: add_amount_info_and_extrinsic_hash.sql  add_wich_transaction_fee.sql  database.sql  update_glitch_address.sql
feescript/: index.js  package-lock.json  package.json  transfer.js
src/: args.rs  balance_monitor.rs  block_listener.rs  config.rs  database.rs  glitch.rs  js_call.rs  logger.rs  main.rs  scanner.rs
