[package]
name = "glitch-bridge"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'glitch-bridge'

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.21.1", features = ["full"] }
web3 = { version = "0.18.0", default-features = true, features = ["http-rustls-tls"] }
log = "0.4.17"
env_logger = "0.9.1"
futures = "0.3.24"
log4rs = "1.1.0"
mysql_async = "0.30.0"
dialoguer = "0.10"
regex = "1"
substrate-api-client = {git = "https://github.com/scs/substrate-api-client.git", features = ["tungstenite-client", "ws-client", "staking-xt"],  tag = "v0.9.0" }
kitchensink-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
hex-literal = "0.3.4"
hex = "0.4.3"
base58 = "0.2.0"
chrono = "0.4.0"

[dependencies.syn]
version = "=1.0.107"
features = ["full", "visit", "extra-traits"]